--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -147,12 +147,16 @@ jobs:
           sarif_file: "trivy-results.sarif"
       - name: Install yq
         run: |
-          wget https://github.com/mikefarah/yq/releases/download/v4.24.5/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
+          wget https://github.com/mikefarah/yq/releases/download/v4.28.1/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
           yq --version
       # - name: Install yq
       #   uses: mikefarah/yq@master
       #   with:
       #     cmd: yq -i '.foo.bar = "cool"' 'config.yml'
+      - name: Install semver-tool
+        run: |
+          wget https://raw.githubusercontent.com/fsaintjacques/semver-tool/3.4.0/src/semver -O /usr/bin/semver && chmod +x /usr/bin/semver
+          semver --version
 
       - name: Checkout private tools
         uses: actions/checkout@v3
@@ -170,7 +174,10 @@ jobs:
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
           set -x
           yq -i '.image.tag = "${{github.sha}}"' ./values.yaml
-          yq -i '.version = "${{github.sha}}"' Chart.yaml
+          VERSION=yq '.version'
+          VERSION=semver bump prerelease ${{github.sha}} $VERSION
+          yq -i '.version = $VERSION' Chart.yaml
+          yq -i '.appVersion = "${{github.sha}}"' Chart.yaml
           git config --global user.name $GIT_USER_NAME
           git config --global user.email $GIT_USER_MAIL
           git add .  
